--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elliott Baker, GIS Analyst + Amatuer Web Developer</title>
+    <title>Elliott Baker, GIS Analyst + Web Developer</title>
     <link href="https://fonts.googleapis.com/css?family=IM+Fell+English:ital@0;1|Montserrat:400,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
   </head>
