--- a/Apps/phoenixBikeways/phoenixBikeways.html
+++ b/Apps/phoenixBikeways/phoenixBikeways.html
@@ -6,7 +6,7 @@
       <title>Elliott Baker GEOG 585 Term Project - Phoenix Bikeways</title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.css" type="text/css" crossorigin="">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.js" crossorigin=""></script>
-      <script src="http://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+      <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
       <script src="js/leaflet-providers.js"></script>
       <script src="bikeways.js"></script>
       <script src="lightRailStops.js"></script>
