--- a/Apps/phoenixBikeways/phoenixBikeways.html
+++ b/Apps/phoenixBikeways/phoenixBikeways.html
@@ -119,6 +119,12 @@
             }
 
             map.on('locationfound', onLocationFound);
+            
+            function onLocationError(e) {
+              alert(e.message);
+            }
+
+            map.on('locationerror', onLocationError);
 
           // Add in GeoJSON Layers
 
