--- a/Apps/phoenixBikeways/phoenixBikeways.html
+++ b/Apps/phoenixBikeways/phoenixBikeways.html
@@ -115,11 +115,11 @@
             L.marker(e.latlng).addTo(map)
             .bindPopup("You are within " + radius + " meters from this point").openPopup();
 
-            L.circle(e.latlng, radius).addTo(map);
+            //L.circle(e.latlng, radius).addTo(map);
             }
 
             map.on('locationfound', onLocationFound);
-            
+
             function onLocationError(e) {
               alert(e.message);
             }
