--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
             <a class="btn" href="Apps/phoenixBikeways/phoenixBikeways.html" target="_blank">Phoenix Bikeways</a>
           </section>
 
+          <!-- Project 2 -->
+          <section class="project-item">
+            <img src="images/2020_US_Election.PNG" alt="2020 Presidential Election Results ESRI Javascript API">
+            <h3>2020 US Presidential Election Results with ESRI Javascript API</h3>
+            <p>Web app showing 2020 US presidential election results. Created using HTML, CSS, Javascript, and ESRI's Javascript API. </p>
+            <a class="btn" href="Apps/electionResults2020/electionResults2020.html" target="_blank">2020 US Presidential Election</a>
+          </section>
+
         </div>
       </section>
 
