took out "hi this is an edit"

--- a/Apps/phoenixBikeways/phoenixBikeways.html
+++ b/Apps/phoenixBikeways/phoenixBikeways.html
@@ -10,7 +10,7 @@
       <script src="js/leaflet-providers.js"></script>
       <script src="bikeways.js"></script>
       <script src="lightRailStops.js"></script>
-      <script src="lightRailLines.js"></script> hi this is an edit. 
+      <script src="lightRailLines.js"></script>
       <link rel="stylesheet" href="style.css" type="text/css">
 
         <script type="text/javascript">
