--- a/Apps/electionResults2020/electionResults2020.html
+++ b/Apps/electionResults2020/electionResults2020.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -29,9 +30,8 @@
     </div>
     <div class="panel-side">
       <h2>Counties</h2>
-      <p>Zoom and pan map to update counties list</p>
+      <p>Specify a state to see a list of its counties</p>
       <ul id="list_counties">
-        <li>Loading&hellip;</li>
       </ul>
     </div>
   </body>
