added new thumbnail

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
           <!-- Project 3 -->
           <section class="project-item">
-            <img src="images/2020_US_Election.PNG" alt="US Active Wildfires ESRI Javascript API">
+            <img src="images/WildfireApp.PNG" alt="US Active Wildfires ESRI Javascript API">
             <h3>Active Wildfire Mapper with ESRI Javascript API</h3>
             <p>Web app showing currently active wildfires in the United States. Created using HTML, CSS, Javascript, and ESRI's Javascript API. </p>
             <a class="btn" href="Apps/activeFiresUS/ActiveWildfires.html" target="_blank">Active Wildfires US</a>
