Added SOC Locator

--- a/index.html
+++ b/index.html
@@ -27,13 +27,21 @@
 
           <!-- Project 1 -->
           <section class="project-item">
+            <img src="images/SOC_Locator.png" alt="Statement of Claimant Locator">
+            <h3>Arizona Water Rights Statements of Claimant Locator with ESRI Experience Builder</h3>
+            <p>Web app showing water rights SOC records for the state of Arizona. Created using ESRI's Experience Builder, HTML, CSS, Arcade, Python, SQL, and FME. </p>
+            <a class="btn" href="https://experience.arcgis.com/experience/dccd34942e394028860e7505bd52fc8a" target="_blank">SOC Locator</a>
+          </section>
+
+          <!-- Project 2 -->
+          <section class="project-item">
             <img src="images/GEOG585.PNG" alt="Phoenix Bikeways Leaflet.js">
             <h3>Phoenix Bikeways with Leaflet</h3>
             <p>Web app showing bike infrastructure in Metro Phoenix. Created using HTML, CSS, Javascript, Leaflet, Open Street Maps, and QGIS. </p>
             <a class="btn" href="Apps/phoenixBikeways/phoenixBikeways.html" target="_blank">Phoenix Bikeways</a>
           </section>
 
-          <!-- Project 2 -->
+          <!-- Project 3 -->
           <section class="project-item">
             <img src="images/2020_US_Election.PNG" alt="2020 Presidential Election Results ESRI Javascript API">
             <h3>2020 US Presidential Election Results with ESRI Javascript API</h3>
@@ -41,7 +49,7 @@
             <a class="btn" href="Apps/electionResults2020/electionResults2020.html" target="_blank">2020 US Presidential Election</a>
           </section>
 
-          <!-- Project 3 -->
+          <!-- Project 4 -->
           <section class="project-item">
             <img src="images/WildfireApp.PNG" alt="US Active Wildfires ESRI Javascript API">
             <h3>Active Wildfire Mapper with ESRI Javascript API</h3>
